[metadata]
name = INLP
description = IRIS NLP first few attempts to build Big Brain our main goal.
long_description = file: README.md, LICENSE.rst
keywords = nlp, bb
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
    =big_brain
packages = find_namespace:
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst, *.json
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src, big_brain
exclude =
    examples*
    tools*
    docs*
